--- a/src/styles.css
+++ b/src/styles.css
@@ -1,97 +1,119 @@
 @import "~bootstrap/dist/css/bootstrap.css";
 @font-face {
-    font-family: 'Open Sans';
-    src: url('/src/assets/fonts/OpenSans-Regular.ttf');
+	font-family: 'Open Sans';
+	src: url('/src/assets/fonts/OpenSans-Regular.ttf');
 }
 
 nav {
-    background: #DE0100!important;
-    font-family: 'Open Sans', sans-serif!important;
-    width: wrap;
-    margin: 0;
+	background: #de0100 !important;
+	font-family: 'Open Sans', sans-serif !important;
+	width: wrap;
+	margin: 0;
 }
 
 .div {
-    display: inline-block;
+	display: inline-block;
+}
+html,
+body {
+	background: #f3f3f3;
+	opacity: 4;
 }
 
 .card-name {
-    height: 200px;
+	height: 200px;
 }
 
 .card-last {
-    height: 255px;
+	height: 255px;
 }
 
 .card-line {
-    height: 480px;
+	height: 480px;
 }
 
 .card-color {
-    background-color: #FAF7F5!important;
+	background-color: #faf7f5 !important;
 }
 
 h1,
-h2,
-h3 {
-    font-family: 'Open Sans', sans-serif!important;
-    color: #DE0100;
+h2 {
+	text-align: left;
+	font: Regular 24px/28px Open Sans;
+	letter-spacing: 0;
+	color: #999999;
+	opacity: 1;
 }
 
 .container-css {
-    width: 90%;
+	width: 90%;
 }
 
 .logoStyle {
-    margin-left: 4%;
+	margin-left: 4%;
+}
+.list-item {
+	background: rgb(223, 221, 221) 0% 0% no-repeat padding-box;
+	border-radius: 10px;
+	opacity: 1;
+	margin-bottom: 5px;
 }
 
-.fila-box {
-    width: 90%;
-    margin: auto;
-}
+/* width */
+::-webkit-scrollbar {
+	width: 20px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+	box-shadow: inset 0 0 2px grey; 
+	border-radius: 10px;
+  }
+   
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+	background: red; 
+	border-radius: 10px;
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+	background: #b30000; 
+  }
 
 .text-size-historico {
-    font-family: 'Open Sans', sans-serif!important;
-    font-size: 32px;
+	font-family: 'Open Sans', sans-serif !important;
+	font-size: 32px;
 }
 
 .text-size-fila {
-    font-family: 'Open Sans', sans-serif!important;
-    font-size: 32px;
+	text-align: left;
+	font: 'Regular' 24px/28px 'Open Sans';
+	letter-spacing: 0;
+	color: #999999;
+	opacity: 1;
+}
+
+.scroll-bar {
+	overflow-y: scroll;
 }
 
 .text-size-name {
-    font-family: 'Open Sans', sans-serif!important;
-    font-size: 64px;
-    color: black;
-}
-
-.border-itau {
-    border: 8px solid #DD0200;
+	font-family: 'Open Sans', sans-serif !important;
+	font-size: 64px;
+	color: black;
 }
 
 .ts {
-    font-size: 64px;
-    margin-left: 62%;
-    font: Bold 64px 70/64px Arial;
-}
-
-.mesa {
-    margin-top: -13px;
-    font-size: 32px;
-    margin-right: 55px;
-    margin-bottom: 10px;
+	font-size: 64px;
+	margin-left: 62%;
+	font: Bold 64px 70/64px Arial;
 }
 
 ul {
-    list-style-type: none;
-}
-
-div {
-    border-radius: 10px;
+	list-style-type: none;
 }
 
 footer {
-    background: #212529;
+	background: #212529;
 }
