--- a/src/app/components/simple-list/simple-list.component.html
+++ b/src/app/components/simple-list/simple-list.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid p-0">
+
 
     <nav class="navbar navbar-expand-lg navbar-light border-bottom">
         <a class="navbar-brand logoStyle"><img src="../../../assets/img/logo-santander-02.png " width="190"></a>
@@ -8,10 +8,10 @@
     <div class="container-css mx-auto">
         <div class="mt-5"></div>
         <div class="row">
-        
             <div class="col-md-8 p-0 m-0 mt-2">
+
                     <div>
-                        <h2 class="d-flex ml-1">fila</h2>
+                        <h2 class="d-flex ml-3">Gerenciamento de fila</h2>
                     </div>
                    
                         <div class="row">
@@ -78,4 +78,3 @@
             <marquee behavior="alternate " id="day" class="text-white">{{santander}}</marquee>
     </footer>
 
-</div>
