--- a/src/styles.css
+++ b/src/styles.css
@@ -46,25 +46,25 @@ h2 {
 
 /* width */
 ::-webkit-scrollbar {
-	width: 20px;
-  }
-  
-  /* Track */
-  ::-webkit-scrollbar-track {
-	box-shadow: inset 0 0 2px grey; 
+	width: 19px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+	box-shadow: inset 0 0 2px grey;
 	border-radius: 10px;
-  }
-   
-  /* Handle */
-  ::-webkit-scrollbar-thumb {
-	background: red; 
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+	background: #999999;
 	border-radius: 10px;
-  }
-  
-  /* Handle on hover */
-  ::-webkit-scrollbar-thumb:hover {
-	background: #b30000; 
-  }
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+	background: 0#999999;
+}
 
 .text-size-historico {
 	font-family: 'Open Sans', sans-serif !important;
@@ -80,13 +80,19 @@ h2 {
 }
 
 .scroll-bar {
-	overflow-y: scroll;
+	overflow-y: auto;
 }
 
 .text-size-name {
 	font-family: 'Open Sans', sans-serif !important;
 	font-size: 64px;
 	color: black;
+}
+
+.card-body {
+	background: #ffffff 0% 0% no-repeat padding-box;
+	border-radius: 10px;
+	opacity: 1;
 }
 
 .ts {
