--- a/src/app/components/simple-list/simple-list.component.html
+++ b/src/app/components/simple-list/simple-list.component.html
@@ -1,107 +1,75 @@
+<nav class="navbar navbar-expand-lg navbar-light border-bottom">
+    <a class="navbar-brand logoStyle"><img src="../../../assets/img/logo-santander-02.png " width="190"></a>
+    <p class="ts p-0 mb-0 text-white" id="relogio"></p>
+</nav>
+
+<div class="container-css mx-auto">
+    <div class="mt-5"></div>
+    <div class="row">
+        <div class="col-md-8 p-0 m-0 mt-2">
+
+            <div>
+                <h2 class="ml-4 mb-3">Gerenciamento de fila</h2>
+            </div>
+
+            <div class="col-md-12 ">
+
+                <div class="row">
+
+                    <div class="col-md-2  ">Setor</div>
+                    <div class="col-md-3 ">Nome</div>
+                    <div class="col-md-3  ">Serviço</div>
+                    <div class="col-md-2  ">Chegada</div>
+                    <div class="col-md-1  ">&nbsp;</div>
+                    <div class=" offset-md-6 "></div>
+
+                </div>
 
 
-    <nav class="navbar navbar-expand-lg navbar-light border-bottom">
-        <a class="navbar-brand logoStyle"><img src="../../../assets/img/logo-santander-02.png " width="190"></a>
-        <p class="ts p-0 mb-0 text-white" id="relogio"></p>
-    </nav>
+                <div class="row ">
+                    <div class="col-md-12 scroll-bar ">
+                        <div *ngFor="let client of listClients | slice:0:15 " class="list-item">
+                            <div class="row ">
 
-    <div class="container-css mx-auto">
-        <div class="mt-5"></div>
-        <div class="row">
-            <div class="col-md-7 p-0 m-0 mt-2">
+                                <div class="col-md-2 setor text-center " [ngStyle]="{ 'background-color':getColor(client.setor)} "> {{client.setor}}</div>
 
-                    <div>
-                        <h2 class="d-flex ml-4 mb-3">Gerenciamento de fila</h2>
-                    </div>
-                   
-                            <div class="col-md-9 d-flex">
-                                <div class="text-size-fila w-100 p-0">
-                                    <div class="row w-100 m-0 d-flex align-items-center">
+                                <div class=" col-md-3 my-auto"> {{client.name}} </div>
 
-                                        <h5 class="col-md-2 mr-3 ml-3 p-0">Setor</h5>
-                                        <h5 class="col-md-2 mr-2 p-0">Nome</h5>
-                                        <h5 class="col-md-2 mr-3 p-0">Serviço</h5>
-                                        <h5 class="col-md-2 mr-3 p-0">Chegada</h5>
-                                        <h5 class="col-md-2 ml-3 p-0 ">Chamado</h5>
+                                <div class=" col-md-3 ml-2 my-auto "> {{client.service}} </div>
 
-                                        <div class="col-md-12 m-0 scroll-bar ">
+                                <div class=" col-md-2 ml-2  my-auto "> {{client.hrChegada}} Hrs </div>
 
-                                        <div *ngFor="let client of listClients | slice:0:15 " class="text-size-fila d-flex w-100 list-item">
-
-                                            <div class="col-md-2 m-0 p-0 d-flex ">
-                                                <ul class="p-0 d-flex flex-column ">
-                                                    <li class="mt-2 p-0 text-size-fila ml-3">{{client.setor}}</li>
-                                                </ul>
-                                            </div>
-
-                                            <div class="col-md-2 m-0 p-0  d-flex ">
-                                                <ul class="p-0 d-flex flex-column ">
-                                                    <li class="mt-2 p-0 text-size-fila text-center ml-3">{{client.name}}</li>
-                                                </ul>
-                                            </div>
-
-                                            <div class="col-md-3 m-0 p-0 d-flex">
-                                                <ul class="p-0 d-flex flex-column">
-                                                    <li class="mt-2 p-0 text-size-fila text-center ml-3">{{client.service}}</li>
-                                                </ul>
-                                            </div>
-
-
-                                            <div class="col-md-2 m-0 p-0  d-flex">
-                                                <ul class="p-0 d-flex flex-column ">
-                                                    <li class="text-size-fila mt-2 p-0 text-center  ml-3">{{client.hrChegada}} Hrs</li>
-                                                </ul>
-                                            </div>
-
-                                            <div class="col-md-2 m-0 p-0  d-flex">
-                                                <ul class="p-0 d-flex flex-column ">
-                                                    <li class=" mt-2 p-0 text-size-fila text-center ml-5">{{client.chamado}}</li>
-                                                </ul>
-                                            </div>
-
-                                        </div>
-                                    </div>
-                            
+                                <div class=" col-md-1 my-auto"> <button class="btn btn-danger ">Chamar </button></div>
                             </div>
                         </div>
-            
+                    </div>
+
+                </div>
+
+
+            </div>
+        </div>
+
+        <div class="col-md-4 p-0 m-0 text-size-fila mt-5 ">
+            <h5 class="col-md-2 mr-3 ml-1 mb-2 p-0 mt-2 ">Histórico</h5>
+
+            <div class="card-body text-size-fila ">
+
+                <div class="mt-3 "></div>
+                <div *ngFor="let client of listClients | slice:0:10 " class="text-size-fila d-flex w-100 ">
+
+                    <div class="m-0 p-0 text-size-fila text-center ml-3 ">{{client.name}}</div>
+                    <div class="m-0 p-0 text-size-fila text-center ml-3 ">{{client.service}} </div>
+                    <div class="text-size-fila text-center ml-3 "> {{client.hrChegada}} Hrs</div>
+
                 </div>
             </div>
 
-            <div class="col-md-5 mt-5 p-0 m-0 text-size-fila ">
-                    <h5 class="col-md-2 mr-3 ml-1 mb-2 p-0 mt-2 ">Histórico</h5>
-                <div class="card text-size-fila">
-
-                        <div class="mt-3"></div>
-                        <div *ngFor="let client of listClients | slice:0:15 " class="text-size-fila d-flex w-100">
-                            
-                            
-                                <div class="col-md-2 m-0 p-0  d-flex ">
-                                        <ul class="p-0 d-flex flex-column ">
-                                            <li class="m-0 p-0 text-size-fila text-center ml-3">{{client.name}}</li>
-                                        </ul>
-                                </div>
-                        
-                                    <div class="col-md-3 m-0 p-0 d-flex">
-                                            <ul class="p-0 d-flex flex-column">
-                                                <li class="m-0 p-0 text-size-fila text-center ml-3">{{client.service}}</li>
-                                            </ul>
-                                    </div>
-
-                                        <div class="col-md-2 m-0 p-0  d-flex">
-                                                <ul class="p-0 d-flex flex-column ">
-                                                    <li class="text-size-fila text-center  ml-3">{{client.hrChegada}} Hrs</li>
-                                                </ul>
-                                        </div>
-                        </div>
-                    </div>
-
-            </div>
-
         </div>
+
     </div>
+</div>
 
-    <footer class="col-md-12 fixed-bottom m-0 p-0 footer border-top p-2">
-            <marquee behavior="alternate " id="day" class="text-white">{{santander}}</marquee>
-    </footer>
-
+<footer class="col-md-12 fixed-bottom m-0 p-0 footer border-top p-2 ">
+    <marquee behavior="alternate " id="day " class="text-white ">{{santander}}</marquee>
+</footer>;
