--- a/src/styles.css
+++ b/src/styles.css
@@ -1,110 +1,120 @@
 @import "~bootstrap/dist/css/bootstrap.css";
 @font-face {
-	font-family: 'Open Sans';
-	src: url('/src/assets/fonts/OpenSans-Regular.ttf');
+    font-family: 'Open Sans';
+    src: url('/src/assets/fonts/OpenSans-Regular.ttf');
 }
 
 nav {
-	background: #de0100 !important;
-	font-family: 'Open Sans', sans-serif !important;
-	width: wrap;
-	margin: 0;
+    background: #de0100 !important;
+    font-family: 'Open Sans', sans-serif !important;
+    width: wrap;
+    margin: 0;
 }
 
 .div {
-	display: inline-block;
+    display: inline-block;
 }
+
 html,
 body {
-	background: #f3f3f3 !important;
-	opacity: 4;
+    background: #f3f3f3 !important;
+    opacity: 4;
 }
 
 h1,
 h2 {
-	text-align: left;
-	font: 'Regular' 24px/28px 'Open Sans';
-	letter-spacing: 0;
-	color: #999999;
-	opacity: 1;
+    text-align: left;
+    font: 'Regular' 24px/28px 'Open Sans';
+    letter-spacing: 0;
+    color: #999999;
+    opacity: 1;
 }
 
 .container-css {
-	width: 90%;
-	height: 90%;
+    width: 90%;
+    height: 90%;
 }
 
 .logoStyle {
-	margin-left: 4%;
+    margin-left: 4%;
 }
+
 .list-item {
-	background: rgb(223, 221, 221) 0% 0% no-repeat padding-box;
-	border-radius: 10px;
-	opacity: 1;
-	margin-bottom: 5px;
+    background: rgb(223, 221, 221) 0% 0%;
+    border-radius: 10px;
+    opacity: 1;
 }
+
 
 /* width */
+
 ::-webkit-scrollbar {
-	width: 19px;
+    width: 19px;
 }
+
 
 /* Track */
+
 ::-webkit-scrollbar-track {
-	box-shadow: inset 0 0 2px grey;
-	border-radius: 10px;
+    box-shadow: inset 0 0 2px grey;
+    border-radius: 10px;
 }
+
 
 /* Handle */
+
 ::-webkit-scrollbar-thumb {
-	background: #999999;
-	border-radius: 10px;
+    background: #999999;
+    border-radius: 10px;
 }
 
+
 /* Handle on hover */
+
 ::-webkit-scrollbar-thumb:hover {
-	background: 0#999999;
+    background: 0#999999;
 }
 
 .text-size-historico {
-	font-family: 'Open Sans', sans-serif !important;
-	font-size: 32px;
-}
-
-.text-size-fila {
-	text-align: left;
-	font: 'Regular' 24px/28px 'Open Sans';
-	letter-spacing: 0;
-	color: #999999;
-	opacity: 1;
+    font-family: 'Open Sans', sans-serif !important;
+    font-size: 32px;
 }
 
 .scroll-bar {
-	overflow-y: auto;
+    overflow-y: scroll;
+    width: 50px;
+    height: 500px;
 }
 
 .text-size-name {
-	font-family: 'Open Sans', sans-serif !important;
-	font-size: 64px;
-	color: black;
+    font-family: 'Open Sans', sans-serif !important;
+    font-size: 64px;
+    color: black;
 }
 
 .card-body {
-	background: #ffffff 0% 0% no-repeat padding-box;
-	border-radius: 10px;
-	opacity: 1;
+    background: #ffffff 0% 0% no-repeat padding-box;
+    border-radius: 10px;
+    opacity: 1;
+    height: 93%;
+}
+
+.setor {
+    border-radius: 10px 0px 0px 10px;
+    opacity: 1;
+    color: #ffffff;
 }
 
 .ts {
-	font-size: 64px;
-	margin-left: 62%;
-	font: Bold 64px 70/64px Arial;
+    font-size: 64px;
+    margin-left: 62%;
+    font: Bold 64px 70/64px Arial;
 }
 
 ul {
-	list-style-type: none;
+    list-style-type: none;
 }
 
 footer {
-	background: #212529;
+    background: #212529;
 }
