--- a/src/app/components/simple-list/simple-list.component.html
+++ b/src/app/components/simple-list/simple-list.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light border-bottom">
-    <a class="navbar-brand logoStyle"><img src="../../../assets/img/logo-santander-02.png " width="190"></a>
+    <a class="navbar-brand logoStyle"><img src="../../../assets/img/logo-santander-02.png " width="115"></a>
     <p class="ts p-0 mb-0 text-white" id="relogio"></p>
 </nav>
 
@@ -9,37 +9,37 @@
         <div class="col-md-8 p-0 m-0 mt-2">
 
             <div>
-                <h2 class="ml-4 mb-3">Gerenciamento de fila</h2>
+                <h2 class=" mb-3">Gerenciamento de fila</h2>
             </div>
 
             <div class="col-md-12 ">
 
-                <div class="row">
+                <div class="row table-title">
 
-                    <div class="col-md-2  ">Setor</div>
+                    <div class="col-md-1 ml-0 pl-0 ">Setor</div>
                     <div class="col-md-3 ">Nome</div>
                     <div class="col-md-3  ">Serviço</div>
-                    <div class="col-md-2  ">Chegada</div>
+                    <div class="col-md-3  ">Chegada</div>
                     <div class="col-md-1  ">&nbsp;</div>
-                    <div class=" offset-md-6 "></div>
+         
 
                 </div>
 
 
                 <div class="row ">
                     <div class="col-md-12 scroll-bar ">
-                        <div *ngFor="let client of listClients | slice:0:15 " class="list-item">
+                        <div *ngFor="let client of listClients | slice:0:15 " class="list-item mt-2 mb-2" >
                             <div class="row ">
 
-                                <div class="col-md-2 setor text-center " [ngStyle]="{ 'background-color':getColor(client.setor)} "> {{client.setor}}</div>
-
-                                <div class=" col-md-3 my-auto"> {{client.name}} </div>
+                                <div [ngStyle]="{ 'background-color':getColor(client.setor)} " class="setor col-md-1 text-center p-3">{{client.setor}}</div>
+                    
+                                <div class=" col-md-3 my-auto p-3"> {{client.name}} </div>
 
                                 <div class=" col-md-3 ml-2 my-auto "> {{client.service}} </div>
 
-                                <div class=" col-md-2 ml-2  my-auto "> {{client.hrChegada}} Hrs </div>
+                                <div class=" col-md-3 ml-2  my-auto  p-3"> {{client.hrChegada.seconds*1000|date:'hh:mm:ss'}}</div>
 
-                                <div class=" col-md-1 my-auto"> <button class="btn btn-danger ">Chamar </button></div>
+                                <div class=" col-md-1 my-auto p-2"> <button class="btn btn-danger " (click)="callClient()">Chamar </button></div>
                             </div>
                         </div>
                     </div>
@@ -51,16 +51,16 @@
         </div>
 
         <div class="col-md-4 p-0 m-0 text-size-fila mt-5 ">
-            <h5 class="col-md-2 mr-3 ml-1 mb-2 p-0 mt-2 ">Histórico</h5>
+            <div class="  table-title ml-5 mt-3 mb-1">Histórico</div>
 
-            <div class="card-body text-size-fila ">
+            <div class="card-body text-size-fila ml-3 ">
 
-                <div class="mt-3 "></div>
-                <div *ngFor="let client of listClients | slice:0:10 " class="text-size-fila d-flex w-100 ">
+                
+                <div *ngFor="let client of listClients | slice:0:10 " class="text-size-fila d-flex pt-1 pb-1 justify-content-between">
 
                     <div class="m-0 p-0 text-size-fila text-center ml-3 ">{{client.name}}</div>
                     <div class="m-0 p-0 text-size-fila text-center ml-3 ">{{client.service}} </div>
-                    <div class="text-size-fila text-center ml-3 "> {{client.hrChegada}} Hrs</div>
+                    <div class="text-size-fila text-center ml-3 "> {{client.hrChegada.seconds*1000|date:'hh:mm:ss'}}</div>
 
                 </div>
             </div>
